--- a/views/layout.haml
+++ b/views/layout.haml
@@ -4,6 +4,6 @@
     %title Dave+Eileen
     %link(rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Armata|Paytone+One")
     %link(rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css")
-    %link(rel="stylesheet" type="text/css" href="stylesheets/daveandeileen.css")
+    %link(rel="stylesheet" type="text/css" href="../stylesheets/daveandeileen.css")
   %body
     = yield
