--- a/views/index.haml
+++ b/views/index.haml
@@ -1,10 +1,11 @@
-%dive.main
-  %span.thick Dave
-  %span.thin and
-  %span.thick Eileen
-%div.sub
-  %i.icon-male.person_icon
-  %i.icon-heart
-  %i.icon-female.person_icon
-  %br
-  %div totally engaged as of 7.27.13
+%h1 fact
+.fact
+  The wedding is Smarch 32nd, 2014 at Some Venue, starting at 5pm.  Be there.
+
+%h1 fact
+.fact
+  Dave and Eileen got engaged on July 27th, 2013 in Yosemie National Park.  It was awesome.  You would have cried if you were there.
+
+%h1 fact
+.fact
+  If you've forgotten how send mail you can RSVP right here on this website (yes, the one you're on right now!)
