A few more adjustments and added the subtitles feature

--- a/public/stylesheets/daveandeileen.css
+++ b/public/stylesheets/daveandeileen.css
@@ -2,6 +2,7 @@ body {
   background-image: url("../images/clouds_bg.jpg");
   background-color: #77939e;
   font-family: 'Ariel', sans-serif;
+  color: #333333;
 }
 
 header {
