--- a/views/index.haml
+++ b/views/index.haml
@@ -4,7 +4,7 @@
 
 %h1 fact
 .fact
-  Dave and Eileen got engaged on July 27th, 2013 in Yosemie National Park.  It was awesome.  You would have cried if you were there.
+  Dave and Eileen got engaged on July 27th, 2013 in Yosemite National Park.  It was awesome.  You would have cried if you were there.
 
 %h1 fact
 .fact
