--- a/views/layout.haml
+++ b/views/layout.haml
@@ -9,6 +9,7 @@
     #shell
       %header
         #title Dave + Eileen
+        #subtitle= get_subtitle
       %nav
         = haml :_nav
         %br.clear
