--- a/public/stylesheets/daveandeileen.css
+++ b/public/stylesheets/daveandeileen.css
@@ -26,7 +26,7 @@ a {
 #shell {
   background-color: #f9f9f9;
   width: 900px;
-  padding: 50px;
+  padding: 30px 50px 50px 50px;
   margin-top: 120px;
   margin-left: auto;
   margin-right: auto;
@@ -36,14 +36,22 @@ a {
 }
 
 #title {
-  font-size: 60px;
+  font-size: 80px;
   color: #77939e;
   font-weight: bold;
+  font-family: 'Paytone One', sans-serif;
+}
+
+#subtitle {
+  color: #cec1b0;
+  font-size: 30px;
+  font-family: 'Neuton', serif;
+  margin-top: -10px;
 }
 
 ul.nav li {
   list-style: none;
-  float: left;
+  display: inline;
   margin-left: 10px;
   margin-right: 10px;
 }
@@ -61,4 +69,26 @@ ul.nav li {
 
 .clear {
   clear: both;
+}
+
+.party_label {
+  font-weight: bold;
+  font-size: 30px;
+  margin-bottom: 20px;
+}
+
+.party_member {
+  margin-bottom: 20px;
+}
+.party_member .name {
+  font-weight: bold;
+  font-size: 20px;
+}
+.party_member .title {
+  color: #cec1b0;
+}
+.party_member .party_photo {
+  float: left;
+  margin-right: 10px;
+  margin-bottom: 10px;
 }
