--- a/views/_nav.haml
+++ b/views/_nav.haml
@@ -2,12 +2,12 @@
   %li 
     %a(href="../backstory") backstory!
   %li 
-    %a(href="../pictures") pictures!
+    %a(href="../photos") pictures!
   %li
     %a(href="../party_animals") wedding party!
   %li 
     %a(href="../details") details!
   %li 
-    %a(href="../blog") blog!
+    %a(href="http://daveandeileen.wordpress.com") blog!
   %li 
     %a(href="../other_stuff") other stuff!
