--- a/views/index.haml
+++ b/views/index.haml
@@ -1,11 +1,14 @@
-%h1 fact
+%img(src="../images/fact.png")
 .fact
-  The wedding is Smarch 32nd, 2014 at Some Venue, starting at 5pm.  Be there.
+  :markdown
+    The wedding will be on August 2nd, 2014 at [Lacuna Art Lofts](http://lacuna2150.com/ "Lacuna Art Lofts") in Chicago.  Be there.
 
-%h1 fact
+%img(src="../images/fact.png")
 .fact
-  Dave and Eileen got engaged on July 27th, 2013 in Yosemite National Park.  It was awesome.  You would have cried if you were there.
+  :markdown
+    Dave and Eileen got engaged on July 27th, 2013 in Yosemite National Park.  It was awesome.  You would have cried if you were there.
 
-%h1 fact
+%img(src="../images/fact.png")
 .fact
-  If you've forgotten how send mail you can RSVP right here on this website (yes, the one you're on right now!)
+  :markdown
+    If you've forgotten how send mail you can RSVP right here on this website (sometime in the future)
