--- a/sass/daveandeileen.scss
+++ b/sass/daveandeileen.scss
@@ -35,6 +35,7 @@ a {
   width: 900px;
   padding: 30px 50px 50px 50px;
   margin-top: 120px;
+  margin-bottom: 50px;
   margin-left: auto;
   margin-right: auto;
 
@@ -50,8 +51,8 @@ a {
 
 #subtitle {
   color: $tanish;
-  font-size: 30px;
-  font-family: 'Neuton', serif;
+  font-size: 24px;
+  /* font-family: 'Neuton', serif; */
   margin-top: -10px;
 }
 
@@ -61,6 +62,12 @@ ul.nav {
     display: inline;
     margin-left: 10px;
     margin-right: 10px;
+  }
+}
+
+ul.blog_posts {
+  li {
+    list-style: none;
   }
 }
 
