--- a/views/layout.haml
+++ b/views/layout.haml
@@ -10,7 +10,7 @@
     #shell
       %header
         %a(href="../" title="Dave + Eileen")
-          #title Dave + Eileen
+          #title
         #subtitle
           = get_subtitle 
           in 
