--- a/public/stylesheets/daveandeileen.css
+++ b/public/stylesheets/daveandeileen.css
@@ -23,8 +23,15 @@ a {
   text-decoration: none;
 }
 
+a:hover {
+  color: #a4b6be;
+}
+
 #shell {
   background-color: #f9f9f9;
+  background-image: url("../images/dave_and_eileen_logo.png");
+  background-position: center 30px;
+  background-repeat: no-repeat;
   width: 900px;
   padding: 30px 50px 50px 50px;
   margin-top: 120px;
@@ -37,19 +44,27 @@ a {
 }
 
 #title {
-  font-size: 80px;
-  color: #77939e;
-  font-weight: bold;
-  font-family: 'Paytone One', sans-serif;
+  width: 600px;
+  height: 200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #subtitle {
-  color: #cec1b0;
-  font-size: 24px;
-  /* font-family: 'Neuton', serif; */
+  color: #333333;
+  font-size: 20px;
   margin-top: -10px;
 }
 
+ul li {
+  list-style: none;
+  margin-left: -30px;
+}
+
+ul.nav {
+  font-family: 'Paytone One', sans-serif;
+  font-size: 22px;
+}
 ul.nav li {
   list-style: none;
   display: inline;
@@ -57,8 +72,8 @@ ul.nav li {
   margin-right: 10px;
 }
 
-ul.blog_posts li {
-  list-style: none;
+.blog_date {
+  font-weight: bold;
 }
 
 #main_content {
