--- a/views/party.haml
+++ b/views/party.haml
@@ -2,37 +2,37 @@
   Bridesmaids
 %bridesmaids
   .party_member
-    %img.party_photo(src="../images/cat_icon_test.png")
+    %img.party_photo(src="../images/cat_icon_test.png" width="150" height="150")
     .name Sarah
     .title maid of honor
     .bio
       Art party Pinterest lo-fi cray. Neutra mlkshk ad, veniam cred farm-to-table Austin keffiyeh literally direct trade. Gentrify freegan swag nesciunt, consequat jean shorts veniam bitters helvetica tousled flexitarian duis mlkshk squid mixtape. Mlkshk beard tofu selvage magna, swag occaecat do voluptate blog non eu. Disrupt enim voluptate, ex next level cred literally whatever High Life. Nihil art party thundercats, fingerstache flexitarian nisi scenester selvage. Banksy Bushwick nesciunt typewriter, exercitation placeat qui sed post-ironic occaecat.
   .party_member
-    %img.party_photo(src="../images/cat_icon_test.png")
+    %img.party_photo(src="../images/cat_icon_test.png" width="150" height="150")
     .name Nicole
     .title 
     .bio
       Art party Pinterest lo-fi cray. Neutra mlkshk ad, veniam cred farm-to-table Austin keffiyeh literally direct trade. Gentrify freegan swag nesciunt, consequat jean shorts veniam bitters helvetica tousled flexitarian duis mlkshk squid mixtape. Mlkshk beard tofu selvage magna, swag occaecat do voluptate blog non eu. Disrupt enim voluptate, ex next level cred literally whatever High Life. Nihil art party thundercats, fingerstache flexitarian nisi scenester selvage. Banksy Bushwick nesciunt typewriter, exercitation placeat qui sed post-ironic occaecat.
   .party_member
-    %img.party_photo(src="../images/cat_icon_test.png")
+    %img.party_photo(src="../images/cat_icon_test.png" width="150" height="150")
     .name Alice
     .title 
     .bio
       Art party Pinterest lo-fi cray. Neutra mlkshk ad, veniam cred farm-to-table Austin keffiyeh literally direct trade. Gentrify freegan swag nesciunt, consequat jean shorts veniam bitters helvetica tousled flexitarian duis mlkshk squid mixtape. Mlkshk beard tofu selvage magna, swag occaecat do voluptate blog non eu. Disrupt enim voluptate, ex next level cred literally whatever High Life. Nihil art party thundercats, fingerstache flexitarian nisi scenester selvage. Banksy Bushwick nesciunt typewriter, exercitation placeat qui sed post-ironic occaecat.
   .party_member
-    %img.party_photo(src="../images/cat_icon_test.png")
+    %img.party_photo(src="../images/cat_icon_test.png" width="150" height="150")
     .name Natalie
     .title 
     .bio
       Art party Pinterest lo-fi cray. Neutra mlkshk ad, veniam cred farm-to-table Austin keffiyeh literally direct trade. Gentrify freegan swag nesciunt, consequat jean shorts veniam bitters helvetica tousled flexitarian duis mlkshk squid mixtape. Mlkshk beard tofu selvage magna, swag occaecat do voluptate blog non eu. Disrupt enim voluptate, ex next level cred literally whatever High Life. Nihil art party thundercats, fingerstache flexitarian nisi scenester selvage. Banksy Bushwick nesciunt typewriter, exercitation placeat qui sed post-ironic occaecat.
   .party_member
-    %img.party_photo(src="../images/cat_icon_test.png")
+    %img.party_photo(src="../images/cat_icon_test.png" width="150" height="150")
     .name Mellisa
     .title 
     .bio
       Art party Pinterest lo-fi cray. Neutra mlkshk ad, veniam cred farm-to-table Austin keffiyeh literally direct trade. Gentrify freegan swag nesciunt, consequat jean shorts veniam bitters helvetica tousled flexitarian duis mlkshk squid mixtape. Mlkshk beard tofu selvage magna, swag occaecat do voluptate blog non eu. Disrupt enim voluptate, ex next level cred literally whatever High Life. Nihil art party thundercats, fingerstache flexitarian nisi scenester selvage. Banksy Bushwick nesciunt typewriter, exercitation placeat qui sed post-ironic occaecat.
   .party_member
-    %img.party_photo(src="../images/cat_icon_test.png")
+    %img.party_photo(src="../images/cat_icon_test.png" width="150" height="150")
     .name Adina
     .title 
     .bio
@@ -42,37 +42,37 @@
   Groomsmen
 %groomsmen
   .party_member
-    %img.party_photo(src="../images/cat_icon_test.png")
+    %img.party_photo(src="../images/party/jeff.jpg" width="150" height="150")
     .name Jeff
     .title best man
     .bio
       Art party Pinterest lo-fi cray. Neutra mlkshk ad, veniam cred farm-to-table Austin keffiyeh literally direct trade. Gentrify freegan swag nesciunt, consequat jean shorts veniam bitters helvetica tousled flexitarian duis mlkshk squid mixtape. Mlkshk beard tofu selvage magna, swag occaecat do voluptate blog non eu. Disrupt enim voluptate, ex next level cred literally whatever High Life. Nihil art party thundercats, fingerstache flexitarian nisi scenester selvage. Banksy Bushwick nesciunt typewriter, exercitation placeat qui sed post-ironic occaecat.
   .party_member
-    %img.party_photo(src="../images/cat_icon_test.png")
+    %img.party_photo(src="../images/party/kyle.jpg" width="150" height="150")
     .name Kyle
     .title 
     .bio
       Art party Pinterest lo-fi cray. Neutra mlkshk ad, veniam cred farm-to-table Austin keffiyeh literally direct trade. Gentrify freegan swag nesciunt, consequat jean shorts veniam bitters helvetica tousled flexitarian duis mlkshk squid mixtape. Mlkshk beard tofu selvage magna, swag occaecat do voluptate blog non eu. Disrupt enim voluptate, ex next level cred literally whatever High Life. Nihil art party thundercats, fingerstache flexitarian nisi scenester selvage. Banksy Bushwick nesciunt typewriter, exercitation placeat qui sed post-ironic occaecat.
   .party_member
-    %img.party_photo(src="../images/cat_icon_test.png")
+    %img.party_photo(src="../images/party/rich.jpg" width="150" height="150")
     .name Rich
     .title 
     .bio
       Art party Pinterest lo-fi cray. Neutra mlkshk ad, veniam cred farm-to-table Austin keffiyeh literally direct trade. Gentrify freegan swag nesciunt, consequat jean shorts veniam bitters helvetica tousled flexitarian duis mlkshk squid mixtape. Mlkshk beard tofu selvage magna, swag occaecat do voluptate blog non eu. Disrupt enim voluptate, ex next level cred literally whatever High Life. Nihil art party thundercats, fingerstache flexitarian nisi scenester selvage. Banksy Bushwick nesciunt typewriter, exercitation placeat qui sed post-ironic occaecat.
   .party_member
-    %img.party_photo(src="../images/cat_icon_test.png")
+    %img.party_photo(src="../images/party/chris.jpg" width="150" height="150")
     .name Chris
     .title 
     .bio
       Art party Pinterest lo-fi cray. Neutra mlkshk ad, veniam cred farm-to-table Austin keffiyeh literally direct trade. Gentrify freegan swag nesciunt, consequat jean shorts veniam bitters helvetica tousled flexitarian duis mlkshk squid mixtape. Mlkshk beard tofu selvage magna, swag occaecat do voluptate blog non eu. Disrupt enim voluptate, ex next level cred literally whatever High Life. Nihil art party thundercats, fingerstache flexitarian nisi scenester selvage. Banksy Bushwick nesciunt typewriter, exercitation placeat qui sed post-ironic occaecat.
   .party_member
-    %img.party_photo(src="../images/cat_icon_test.png")
+    %img.party_photo(src="../images/party/josh.jpg" width="150" height="150")
     .name Josh
     .title 
     .bio
       Art party Pinterest lo-fi cray. Neutra mlkshk ad, veniam cred farm-to-table Austin keffiyeh literally direct trade. Gentrify freegan swag nesciunt, consequat jean shorts veniam bitters helvetica tousled flexitarian duis mlkshk squid mixtape. Mlkshk beard tofu selvage magna, swag occaecat do voluptate blog non eu. Disrupt enim voluptate, ex next level cred literally whatever High Life. Nihil art party thundercats, fingerstache flexitarian nisi scenester selvage. Banksy Bushwick nesciunt typewriter, exercitation placeat qui sed post-ironic occaecat.
   .party_member
-    %img.party_photo(src="../images/cat_icon_test.png")
+    %img.party_photo(src="../images/party/dane.jpg" width="150" height="150")
     .name Dane
     .title 
     .bio
@@ -82,13 +82,13 @@
   Other Important Jobs
 %other
   .party_member
-    %img.party_photo(src="../images/cat_icon_test.png")
+    %img.party_photo(src="../images/cat_icon_test.png" width="150" height="150")
     .name Andrew
     .title Officiant
     .bio
       Art party Pinterest lo-fi cray. Neutra mlkshk ad, veniam cred farm-to-table Austin keffiyeh literally direct trade. Gentrify freegan swag nesciunt, consequat jean shorts veniam bitters helvetica tousled flexitarian duis mlkshk squid mixtape. Mlkshk beard tofu selvage magna, swag occaecat do voluptate blog non eu. Disrupt enim voluptate, ex next level cred literally whatever High Life. Nihil art party thundercats, fingerstache flexitarian nisi scenester selvage. Banksy Bushwick nesciunt typewriter, exercitation placeat qui sed post-ironic occaecat.
   .party_member
-    %img.party_photo(src="../images/cat_icon_test.png")
+    %img.party_photo(src="../images/cat_icon_test.png" width="150" height="150")
     .name Chairman Meow
     .title Cat
     .bio
