--- a/views/layout.haml
+++ b/views/layout.haml
@@ -6,6 +6,8 @@
     %link(rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css")
     %link(rel="stylesheet" type="text/css" href="../stylesheets/daveandeileen.css")
     %link(href="http://fonts.googleapis.com/css?family=Neuton" rel="stylesheet" type="text/css")
+
+    %link(rel="shortcut icon" type="image/x-icon" href="images/favicon.ico")
   %body
     #shell
       %header
